--- a/思源/写味列表转表格导图看板.css
+++ b/思源/写味列表转表格导图看板.css
@@ -7,6 +7,13 @@
 	/*看板*/
 	--kbline-boarditem-minwidth: 14rem;/*看板卡片的最小宽度*/
 	--kb--li--background:#fff;
+    /* --b3-theme-surface: #f6f6f6; */
+    /*--b3-theme-surface: oklch(97.89% 0.0013 106.42);*//* 面板主色 */
+    --b3-theme-surface-lighter:  oklch(from var(--b3-theme-surface) calc(l*0.95) c h );
+    --b3-border-color: var(--b3-theme-surface-lighter);
+    /*--b3-theme-background:  oklch(from var(--b3-theme-surface) calc(l*1.05) c h );*//* 编辑区背景 */
+    --Sv-fold-border: var(--b3-theme-surface-lighter);
+    --Sv-list-background: oklch(from var(--b3-theme-surface) calc(l * 0.3) c h / 0.06);
 }
 
 html[data-theme-mode=dark] {
@@ -14,6 +21,10 @@ html[data-theme-mode=dark] {
     /*导图*/
 	--b3-border-daotu: 2px solid rgba(69, 74, 77);
 	--b3-block-daotu:rgba(41, 42, 45, .86);
+    --b3-border-color: rgba(230, 230, 230, .1);
+    /* --b3-theme-surface: #262626; */
+    /*--b3-theme-surface:oklch(30.61% 0.0087 233.95);*//* 面板主色 */
+    --Sv-list-background: oklch(from var(--b3-theme-surface) calc(l * 2) c h / 0.1);
 	
 	/*看板*/
 	--kbline-boarditem-minwidth: 14rem;/*看板卡片的最小宽度*/
@@ -26,73 +37,61 @@ html[data-theme-mode=dark] {
 	width: calc(100% - 8px);
 	padding:15px 5px 15px 5px;
 	overflow-x: auto;
+    & .li {
+        display: flex;
+        outline:  1px solid var(--b3-border-color);
+        background-color: var(--b3-theme-background);
+        border-radius: 0px;
+        flex-direction: unset;
+        margin: 0;
+        &:before{
+            display: none!important;
+        }
+        &>div {
+            margin-right: 20px;/* 调整每个子列表项右侧边距 */
+        }
+        & .list {
+            padding: 0px;
+            margin: 0px !important;
+            width:100%;
+            outline: 1px solid var(--b3-border-color);
+            border-radius: 0px;
+            &>.li:first-child:nth-last-child(2){
+                top: 50%;
+                transform: translate(0, -50%);
+                height:100%;
+            }/*单子项居中*/
+        }
+        &>.protyle-action {
+            position: absolute;
+            top: 50%;
+            transform: translate(0, -50%);
+            opacity:0.3;
+        }/* 设置前面的符号居中对齐 */
+    }
+    & [data-node-id].li>[data-node-id] {
+        margin-left: 6px !important;
+    }
+    & .p {
+        flex: 1;
+        left:18px;
+        text-align: left;
+        align-items: center;
+        display: flex;
+        min-width: 120px;
+        min-height: 30px;
+        height:auto;
+        margin: 0;
+    }
+    & .li>.list>.li {
+        outline: none !important;
+        border-top:1px solid var(--b3-border-color);
+        &:first-of-type {
+            border-top: none;
+        }
+    }
 }
-/* ————————————————————所有子项目的表格（除去第一列其余的列），包含溢出的空白部分，所以才会有边框—————————————————————— */
 
-.protyle-wysiwyg *[custom-f="bg"] .li .list {
-    padding: 0px;
-    margin: 0px !important;
-	width:100%;
-    outline: 1px solid var(--b3-layout-resize);
-	border-radius: 0px;
-}
-
-/* ————————————————————对所有子列表项设置格式———————————————————— */
-.protyle-wysiwyg *[custom-f="bg"] .li {
-	display: flex;
-    outline:  1px solid var(--b3-layout-resize);
-    background-color: var(--b3-theme-background);
-	border-radius: 0px;
-}
-
-/* ————————————————————调整每个子列表项右侧边距———————————————————— */
-.protyle-wysiwyg *[custom-f="bg"] .li>div {
-    margin-right: 20px;
-}
-
-/* ————————————————————大神增加代码———————————————————— */
-.protyle-wysiwyg *[custom-f="bg"] [data-node-id].li>[data-node-id] {
-    margin-left: 6px !important;
-}
-
-/* ————————————————————对符号后文字设置格式———————————————————— */
-.protyle-wysiwyg *[custom-f="bg"] .p {
-    flex: 1;
-    left:18px;
-    text-align: left;
-    align-items: center;
-    display: flex;
-    min-width: 120px;
-    min-height: 30px;
-    height:auto;
-    margin: 0;
-}
-.protyle-wysiwyg *[custom-f="bg"] .li>.list>.li {
-    outline: none !important;
-    border-top:1px solid var(--b3-layout-resize);
-}
-.protyle-wysiwyg *[custom-f="bg"] .li>.list>.li:first-of-type {
-    border-top: none;
-}
-/* ————————————————————去除小竖线———————————————————— */
-.list[data-node-id][data-type="NodeList"][custom-f="bg"] .li:before{
-    display: none!important;
-}
-
-/* ————————————————————设置前面的符号居中对齐———————————————————— */
-.list[data-node-id][data-type="NodeList"][custom-f="bg"] .li>.protyle-action {
-    position: absolute;
-    top: 50%;
-    transform: translate(0, -50%);
-	opacity:0.3;
-}
-/*单子项居中*/
-
-.protyle-wysiwyg *[custom-f="bg"] .list>.li:first-child:nth-last-child(2){
-    top: 50%;
-    transform: translate(0, -50%);
-	height:100%;
-}
 
 .protyle-wysiwyg *[custom-f="bg"] .li [data-type="NodeHeading"]>[spellcheck]:after{
 	display:none;
@@ -105,12 +104,6 @@ html[data-theme-mode=dark] {
 	width:calc(100% - 12px);
 }
 
-
-
-
-/* ---------------------------------------------------------列表转化为表格 END-------------------------------------------------- */
-
-
 /*————————————————————————列表转导图————————————————————————*/
 /*整个导图取消缩进*/
 .protyle-wysiwyg *[custom-f="dt"] .li .list{
@@ -119,10 +112,11 @@ html[data-theme-mode=dark] {
 	transition: all 0.5s;
 } 
 .protyle-wysiwyg *[custom-f="dt"].list{
-	width:100%-50!important;
 	overflow-x:auto;/*溢出滚动*/
-	padding-bottom:30px!important;
-	margin:10px 4px;
+	padding:60px 30px!important;
+	margin:10px 0px;
+	border: 1px solid var(--Sv-fold-border);
+	background: radial-gradient(var(--Sv-list-background) 1.5px, transparent 1px) 0 0 / 20px 20px;
 }
 /*子项设偏移调整*/
 .protyle-wysiwyg *[custom-f="dt"] [data-node-id].li>[data-node-id]{
@@ -135,6 +129,8 @@ html[data-theme-mode=dark] {
 /*文字设置居中*/
 .protyle-wysiwyg *[custom-f="dt"] .li {
 	display: flex;
+	flex-direction: unset;
+	margin: 0;
 }
 .protyle-wysiwyg *[custom-f="dt"] .li .p,.protyle-wysiwyg *[custom-f="dt"] .li [data-type="NodeHeading"] {
 	display: flex;
@@ -155,7 +151,7 @@ html[data-theme-mode=dark] {
 	padding:5px 0 5px 10px;
 	margin-top:2px;
 	background-color:var(--b3-block-daotu);
-	border-radius:3px;
+	border-radius:8px;
 	box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1) 0px 2px 4px;
 	max-width:15vw;
 }
@@ -237,21 +233,14 @@ html[data-theme-mode=dark] {
 /*下竖线*/
 .protyle-wysiwyg *[custom-f="dt"] .li::after{   
     content: '';   
-    position: absolute;  
-	bottom: 50%;   
+    position: absolute;   
     border-left:var(--b3-border-daotu);  
     width: 20px;  
 	height: 50%; 
 }
 /*单个子项直线*/
 .protyle-wysiwyg *[custom-f="dt"] .list>.li:first-child:nth-last-child(2)::after{   
-	width: 0px;
-}
-/*单个子项直线对齐修正*/
-.list[custom-f="dt"] .list:has(>.li:first-child:nth-last-child(2))::after{   
-	border-radius:0px; 
-	width: 39px!important;
-	margin-bottom:-2px;
+	border-radius:0px!important;
 }
 /*单子项居中*/
 .protyle-wysiwyg *[custom-f="dt"] .list>.li:first-child:nth-last-child(2){
@@ -264,12 +253,12 @@ html[data-theme-mode=dark] {
 }
 /*上框线*/
 .protyle-wysiwyg *[custom-f="dt"] .li:first-child::before{   
-    border-radius:5px 0 0 0 ;
+    border-radius:8px 0 0 0 ;
 }
 /*下框线*/
 .protyle-wysiwyg *[custom-f="dt"] .li:nth-last-child(2)::after{   
     border-bottom:var(--b3-border-daotu)!important;    
-    border-radius:0 0 0 5px!important;    
+    border-radius:0 0 0 8px!important;    
 }
 /*后继承线*/
 .list[custom-f="dt"] .list::after{   
@@ -300,114 +289,46 @@ div *[custom-f="dt"]>[data-type="NodeListItem"].li::after{
 
 
 
+.protyle-wysiwyg *[custom-f="dt"] .li[data-subtype="u"]>.protyle-action svg{
+	color:unset;
+}
+
 
 
 /*————————————————————列表转看板————————————————————*/
 
 .protyle-wysiwyg .list[custom-f~=kb][data-node-id][data-type="NodeList"]
 {
-    display: flex;
-}
-.protyle-wysiwyg *[custom-f~=kb].list[data-node-index]{
-	width:100%!important;
-	overflow-x:auto;/*溢出滚动*/
-	padding-bottom:50px;
-}
-/* ————————————————————所有子项目的表格（除去第一列其余的列），包含溢出的空白部分，所以才会有边框—————————————————————— */
-.protyle-wysiwyg *[custom-f~=kb]>.li>.list{
-    min-width: var(--kbline-boarditem-minwidth);
-    border-radius: 3px;
-    transform: translate(-30px, 0);
-}
-
-
-/* ————————————————————对所有子列表项设置格式———————————————————— */
-
-.protyle-wysiwyg *[custom-f~=kb]>.li>.list>.li{
-    border-radius: 3px;
-    padding: 0.4em 0.4em 0.1em 0 ;
-    margin-bottom: 6px; 
-	background-color:var(--kb--li--background);
-	box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1) 0px 2px 4px;
-}
-
-/*只处理每个列表的第一行*/
-.protyle-wysiwyg *[custom-f~=kb][data-node-index] > div > div:nth-child(2),
-.protyle-wysiwyg .sb>*[custom-f~=kb] > div > div:nth-child(2)
-{
-	min-width: var(--kbline-boarditem-minwidth);
-    border-radius: 3px;
-	padding:9px 10px 11px 30px;
-	left:-30px;
+    display: grid;
+    flex-direction: row;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     margin-bottom: 10px;
 }
-.protyle-wysiwyg *[custom-f~=kb][data-node-index] > div > div:nth-child(2)[data-type="NodeHeading"],
-.protyle-wysiwyg .sb>*[custom-f~=kb] > div > div:nth-child(2)[data-type="NodeHeading"]
-{
 
-	padding:5px 0px 7px 30px;
-}
-.protyle-wysiwyg *[custom-f~=kb] .li [data-type="NodeHeading"]>[spellcheck]:after{
-	display:none;
-}/*取消标题层级提示*/
 
-/*标题行循环颜色*/
-.protyle-wysiwyg *[custom-f~=kb][data-node-index] > div:nth-child(4n-3) > div:nth-child(2),
-.protyle-wysiwyg .sb>*[custom-f~=kb] > div:nth-child(4n-3) > div:nth-child(2){
-    background-color:var(--b3-card-error-background);
-}
-.protyle-wysiwyg *[custom-f~=kb][data-node-index] > div:nth-child(4n-2) > div:nth-child(2),
-.protyle-wysiwyg .sb>*[custom-f~=kb] > div:nth-child(4n-2) > div:nth-child(2){
-    background-color:var(--b3-card-warning-background);
-}
-.protyle-wysiwyg *[custom-f~=kb][data-node-index] > div:nth-child(4n-1) > div:nth-child(2),
-.protyle-wysiwyg .sb>*[custom-f~=kb] > div:nth-child(4n-1) > div:nth-child(2){
-    background-color:var(--b3-card-info-background);
-}
-.protyle-wysiwyg *[custom-f~=kb][data-node-index] > div:nth-child(4n) > div:nth-child(2),
-.protyle-wysiwyg .sb>*[custom-f~=kb] > div:nth-child(4n) > div:nth-child(2){
-    background-color:var(--b3-card-success-background);
+/* ————————————————————所有子项目的表格（除去第一列其余的列），包含溢出的空白部分，所以才会有边框—————————————————————— */
+
+.protyle-wysiwyg *[custom-f~=kb]>.li{
+    min-width: 200px;
+    background-color: var(--Sv-list-background);
+    padding: 8px 8px 2px 8px;
+    margin-right: 10px;
+    margin-bottom: 0px;
+    margin-top: 10px;
+    border-radius: 8px;
+    >[data-node-id]{
+        margin-left: 34px;
+        margin-bottom: 8px;
+    }
 }
 
-/*只处理每个列表第一行的点*/
-.protyle-wysiwyg *[custom-f~=kb][data-node-index] > div > div:nth-child(1),
-.protyle-wysiwyg .sb>*[custom-f~=kb] > div > div:nth-child(1)
-{
-    transform: translate(4px,5px);
-	z-index:2;
+.protyle-wysiwyg .list[custom-f~=kb][data-node-id]>.li>.protyle-action{
+    top: 8px;
 }
 
-/* ————————————————————去除小竖线———————————————————— */
-.list[custom-f="kb"][data-node-id] .li:before {
-    display: none;
+.protyle-wysiwyg .list[custom-f~=kb] [data-node-id].li::before {
+    border-left-color: rgba(0, 0, 0, 0);
 }
-
-/* 对除了第一层之外的子列表 .protyle-action 移动 */
-.protyle-wysiwyg *[custom-f~=kb]>.li>.list>.li>.protyle-action{
-    position: absolute;
-    top: 5px;
-    border-radius: 3px;
+.protyle-wysiwyg .list[custom-f~=kb] [data-node-id].li:hover::before {
+    border-left-color: var(--b3-scroll-color);
 }
-
-/* 引用计数 */
-.list[custom-f="kb"] .protyle-attr--refcount{
-	height: 14px;
-    width: 14px;
-	left:-44px;
-	top:9px;
-    padding: 0;
-    line-height: 14px;
-	text-align: center;
-}
-
-.list[custom-f="kb"] .list .protyle-attr--refcount{
-	height: 14px;
-    width: 14px;
-	left:-14px;
-	top:9px;
-    padding: 0;
-    line-height: 14px;
-	text-align: center;
-}
-
-/*————————————————————列表转化看板 END————————————————————*/
