--- a/思源/思源收藏夹/siyuan_思源网站收藏夹数据优化.css
+++ b/思源/思源收藏夹/siyuan_思源网站收藏夹数据优化.css
@@ -29,6 +29,8 @@
 [custom-my-favriate="true"] .av__cell{
     display: flex;
     align-items: flex-start;
+    max-height: 100px;
+    overflow: auto;
 }
 [custom-my-favriate="true"] .av__cell:has(.av__celltext--url[data-url]) img.av__cellassetimg  {
     max-width: 16px;
